# gp_for_fatima

./: .gitignore  gp_interpolation.ipynb  pyproject.toml
