[project]
name = "gp-for-fatima"
version = "0.1.0"
description = "Shared-kernel GP interpolator for multi-output surrogate modeling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jax==0.5.3",
    "jaxlib==0.5.3",
    "jax-cuda12-plugin==0.5.3",
    "jax-cuda12-pjrt==0.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
]
